--- a/firebase.json
+++ b/firebase.json
@@ -18,12 +18,33 @@
     ],
     "rewrites": [
       {
+        "source": "/alt-this/us-central1/genAltText",
+        "function": "genAltText"
+      },
+      {
         "source": "**",
         "destination": "/index.html"
       }
+    ],
+    "headers": [
+      {
+        "source": "/build/app/**",
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "public, max-age=31536000"
+          }
+        ]
+      },
+      {
+        "source": "ngsw-worker.js",
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "no-cache"
+          }
+        ]
+      }
     ]
-  },
-  "storage": {
-    "rules": "storage.rules"
   }
 }
